Added watch tasks

--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
   },
   "homepage": "https://github.com/garusis/gulp-multienv-approach#readme",
   "devDependencies": {
-    "easy-livereload": "^1.2.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "main-bower-files": "^2.13.1",
+    "babel-preset-es2015": "^6.16.0",
     "compression": "^1.6.2",
     "del": "^2.2.2",
+    "easy-livereload": "^1.2.0",
     "express": "^4.14.0",
     "graceful-fs": "^4.1.5",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-flatten": "^0.3.0",
@@ -47,13 +49,14 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^2.1.1",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.9",
     "http-auth": "^2.4.10",
     "less-plugin-autoprefix": "^1.5.1",
     "lodash": "^4.15.0",
+    "main-bower-files": "^2.13.1",
     "nconf": "^0.8.4",
     "prerender-node": "^2.4.0",
     "yargs": "^4.8.1"
