--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-resource": "~1.4.8",
     "angular": "^1.5.5",
     "ionic": "^1.3.1",
-    "lodash": "^4.16.4"
+    "lodash": "^4.16.4",
+    "ionic-toast": "^0.4.1"
   },
   "resolutions": {
     "angular": "^1.5.5",
