--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular": "^1.5.5",
     "ionic": "^1.3.1",
     "lodash": "^4.16.4",
-    "ionic-toast": "^0.4.1"
+    "ionic-toast": "^0.4.1",
+    "SpinKit": "spinkit#^1.2.5"
   },
   "resolutions": {
     "angular": "^1.5.5",
