--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "angular-sanitize": "~1.5.3",
     "angular-socialshare": "~1.4.5",
     "bootstrap": "~3.3.6",
-    "animate.css": "~3.5.0",
+    "animate.css": "^3.5.2",
     "simple-line-icons": "~2.2.3",
     "font-awesome": "~4.5.0",
     "ngstorage": "~0.3.10",
